[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibevoice"
version = "0.0.1"
authors = [
  { name="vibevoice team", email="vibepod@microsoft.com" },
]
description = "A model for speech generation with an AR + diffusion architecture."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    # Upper bounds prevent breaking changes from major/minor version updates.
    # accelerate 1.12.x is tested and compatible with miniflow.
    # Bump upper bound only after testing new versions.
    "accelerate>=1.12.0,<1.13.0",
    # Upper bounds prevent API breaking changes in transformers.
    # 4.57.x is tested with vibevoice compatibility fixes.
    # See docs/VIBEVOICE_FIXES_README.md before upgrading.
    "transformers>=4.57.0,<4.58.0",
    "llvmlite>=0.40.0",
    "numba>=0.57.0",
    "diffusers",
    "tqdm",
    "numpy",
    "scipy",
    "librosa",
    "ml-collections",
    "absl-py",
    "gradio",
    "av",
    "aiortc",
    "uvicorn[standard]",
    "fastapi"
]


[project.urls]
"Homepage" = "https://github.com/microsoft/VibeVoice"
"Bug Tracker" = "https://github.com/microsoft/VibeVoice/issues"

[tool.setuptools.packages.find]
where = ["."]
